force-app/main/default/objects/Portal_ESR_Category_Lookup__c/Portal_ESR_Category_Lookup__c.object-meta.xml
<CustomObject>
    <description>Contains the values used to complete a ESR submission. These match up with SAP values and is updated manually.</description>
    <label>Portal ESR Category Lookup</label>
    <nameField>
        <label>Portal ESR Category Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal ESR Category Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>