force-app/main/default/objects/Portal_ESR_Category_Lookup__c/fields/CalculatedKey__c.field-meta.xml
<CustomField>
    <fullName>CalculatedKey__c</fullName>
    <description>This field is computed and combines the Cat 1 and Cat 2 values</description>
    <formula>Cat_1_Text__c  &amp;  Cat_2_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CalculatedKey</label>
    <type>Text</type>
</CustomField>