force-app/main/default/objects/Portal_ESR_Category_Lookup__c/fields/Cat_1_4_Chars__c.field-meta.xml
<CustomField>
    <fullName>Cat_1_4_Chars__c</fullName>
    <formula>RIGHT( Cat_1_Code__c, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cat 1_4 Chars</label>
    <type>Text</type>
</CustomField>