force-app/main/default/objects/Portal_ESR_Category_Lookup__c/fields/Cat_1_8_Chars__c.field-meta.xml
<CustomField>
    <fullName>Cat_1_8_Chars__c</fullName>
    <formula>LEFT( Cat_1_Code__c , 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cat 1_8 Chars</label>
    <type>Text</type>
</CustomField>