force-app/main/default/objects/Portal_ESR_Category_Lookup__c/fields/Cat_1_Code__c.field-meta.xml
<CustomField>
    <fullName>Cat_1_Code__c</fullName>
    <description>Code corresponds to the text value and is based on the Global values in SAP</description>
    <label>Cat 1 Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>