force-app/main/default/objects/Portal_ESR_Category_Lookup__c/fields/Cat_1_Text__c.field-meta.xml
<CustomField>
    <fullName>Cat_1_Text__c</fullName>
    <description>Category text value</description>
    <label>Cat 1 Text</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>