force-app/main/default/objects/Portal_ESR_Category_Lookup__c/fields/Cat_2_Text__c.field-meta.xml
<CustomField>
    <fullName>Cat_2_Text__c</fullName>
    <description>The text value and is based on the Global values in SAP</description>
    <label>Cat 2 Text</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>