force-app/main/default/objects/Portal_ESR_Category_Lookup__c/fields/Cat_3_Text__c.field-meta.xml
<CustomField>
    <fullName>Cat_3_Text__c</fullName>
    <description>The text value and is based on the Global values in SAP</description>
    <label>Cat 3 Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>