force-app/main/default/objects/Portal_ESR_Category_Lookup__c/fields/Show_on_Portal__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Portal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Fields with this option selected WILL DISPLAY as options to the Portal User.</description>
    <inlineHelpText>Show to Customer?</inlineHelpText>
    <label>Show on Portal</label>
    <type>Checkbox</type>
</CustomField>