force-app/main/default/objects/Portal_ESR_Category_Lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Show_on_Portal__c</columns>
    <columns>Cat_1_Text__c</columns>
    <columns>Cat_1_Code__c</columns>
    <columns>Cat_1_8_Chars__c</columns>
    <columns>Cat_1_4_Chars__c</columns>
    <columns>Cat_2_Text__c</columns>
    <columns>Cat_2_Code__c</columns>
    <columns>Cat_2_4_Chars__c</columns>
    <columns>Cat_2_8_Chars__c</columns>
    <columns>CalculatedKey__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>