force-app/main/default/objects/Portal_ESR_Category_Lookup__c/listViews/Show_On_Portal.listView-meta.xml
<ListView>
    <fullName>Show_On_Portal</fullName>
    <columns>NAME</columns>
    <columns>Cat_1_4_Chars__c</columns>
    <columns>Cat_1_8_Chars__c</columns>
    <columns>Cat_1_Code__c</columns>
    <columns>Cat_1_Text__c</columns>
    <columns>Cat_2_4_Chars__c</columns>
    <columns>Cat_2_8_Chars__c</columns>
    <columns>Cat_2_Code__c</columns>
    <columns>Cat_2_Text__c</columns>
    <columns>Cat_3_Code__c</columns>
    <columns>Cat_3_Text__c</columns>
    <columns>Cat_4_Code__c</columns>
    <columns>Cat_4_Text__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_on_Portal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Show On Portal</label>
    <language>en_US</language>
</ListView>